--- a/src/main/java/org/iesvegademijas/dao/database.properties
+++ b/src/main/java/org/iesvegademijas/dao/database.properties
@@ -2,5 +2,5 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/
 jdbc.schema=tienda
-jdbc.username=user
-jdbc.password=user
+jdbc.username=zisco
+jdbc.password=12345678
